fix: Drop preview support.